Bug 426197 - Found some mistakes in a few strings
Summary: Found some mistakes in a few strings
Status: RESOLVED FIXED
Alias: None
Product: SeExpr
Classification: Frameworks and Libraries
Component: Translations (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: amyspark
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-05 04:00 UTC by Tyson Tan
Modified: 2020-10-03 22:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tyson Tan 2020-09-05 04:00:05 UTC
##########

#: ExprBuiltins.cpp:138

Current:
x transitions linearly when < x < b 
(it has an extra space at the end too)

Possible correction:
x transitions linearly when a < x < b

##########

#: ExprBuiltins.cpp:401
Current:
color saturate(color val, float amt)
Scale saturation of color by amt.
The color is scaled around the rec709 luminance value,
and negative results are clamped at zero.

(It has an extra empty line at the end)

Possible correction:
Remove empty line

##########

#: ExprBuiltins.cpp:698

Current:
The gain< controls how much each 

Possible correction:
The gain controls how much each 

##########

#: ExprBuiltins.cpp:1175

Current:
The result rotates v such that the Y axis points in the given up direction

Possible correction:
The result is computed as ``loRange + value % (hiRange-loRange+1)``.

##########

#: ExprBuiltins.cpp:1319

Current:
Interpolates a set of values to the parameter specified where y1, ..., yn are
distributed evenly from [0...1]

Possible correction:
Interpolates a set of values to the parameter specified where y1, ..., yn are
distributed evenly from [0..1]

(Is there a reason to use [0..1] instead of [0,1] as in the documentation?)

##########

#: UI/ExprColorCurve.cpp:369
Selected Position: 
(1 empty space at the end)

#: UI/ExprCurve.cpp:276
Selected Position:  
(2 empty spaces at the end)

#: UI/ExprColorCurve.cpp:380
Selected Color:  
(2 empty spaces at the end)

#: UI/ExprCurve.cpp:287
Selected Value:  
(2 empty spaces at the end)

Possible correction(s):
Can we use 1 space in all of them, or is there a reason to use 2 spaces?
Comment 1 amyspark 2020-10-03 22:39:40 UTC
Git commit 8218ab35ca58e6b0ca8db1d7eeef1b815bf60e8e by L. E. Segovia.
Committed on 03/10/2020 at 22:36.
Pushed by lsegovia into branch 'master'.

Clean up various strings

M  +7    -7    src/SeExpr2/ExprBuiltins.cpp
M  +2    -2    src/SeExpr2/UI/ExprColorCurve.cpp
M  +2    -2    src/SeExpr2/UI/ExprCurve.cpp

https://invent.kde.org/graphics/seexpr/commit/8218ab35ca58e6b0ca8db1d7eeef1b815bf60e8e