Clean up various strings

BUG: 426197